search bar floats on top of navbar on scroll when selected; attempted fix with z-index, but unsuccessful; to be addressed later

--- a/client/src/components/Search/style.css
+++ b/client/src/components/Search/style.css
@@ -12,4 +12,5 @@
 
 .searchBar input{
     height: 3rem;
+    z-index: inherit;
 }
